--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ant-design/pro-components": "^2.6.18",
     "antd": "^5.8.6",
     "gatsby": "^5.12.3",
     "react": "^18.2.0",
